# ansible_fqcn_converter

./: .coveragerc  .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_COVERAGE_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TEST_OPTIMIZATION_SUMMARY.md  context7.json  docker-compose.yml  mypy.ini  pyproject.toml  pytest-fast.ini  pytest-ultra-fast.ini  pytest.ini  pytest_xdist_config.py  requirements.txt  setup.cfg  setup.py  test-optimized.sh  test-quick.sh  test-requirements.yml  test-safe.sh  test-ultra-quick.sh  test_cli_commands.py  test_enhanced_features.py  test_enhanced_integration.py  test_interactive.py  (+3 more)
.ansible/modules/: custom_module.py
.github/: CONTRIBUTORS.md  FUNDING.yml  SUPPORT.md  milestones.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  quality-gate-failure.md  question.yml  roadmap_feedback.yml
.github/workflows/: build-validation.yml  ci.yml  comprehensive-tests.yml  context7-docs.yml  deploy-docs.yml  lint-format.yml  pipeline-overview.yml  pre-commit.yml  quality-gate.yml  release-notification.yml  release.yml  security.yml
config/: fqcn_mapping.yml
config/collections/: requirements.yml
docs/: CNAME  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATES.md  README.md  _config.yml  config.json  enhanced-features.md  faq.md  index.md  installation.md  migration-guide.md  troubleshooting.md
docs/community/: feedback-integration.md
docs/deployment/: deployment-guide.md
docs/development/: architecture.md  automated-releases.md  cicd-integration-examples.md  comprehensive-testing.md  contributing.md  coverage-improvement-strategies.md  migration-guide-template.md  parallel-testing.md  performance-monitoring.md  performance-test-improvements.md  performance.md  release-artifacts.md  release-notes-template.md  release-process.md  setup.md  test-execution-guide.md  test-execution-index.md  test-maintenance-procedures.md  test-troubleshooting-guide.md  testing-strategy.md  version-management.md
docs/examples/: basic_usage.py
docs/reference/: api.md
docs/reference/api/: api_reference.json  api_reference.md
docs/security/: security-guide.md
docs/usage/: advanced-usage.md  api.md  cli.md  cli_examples.sh  cli_reference.json  cli_reference.md
scripts/: changelog_generator.py  check-tools.py  config_generator.py  enhance_fqcn_mapping.py  enhance_fqcn_mapping_comprehensive.py  enhanced_test_reporter.py  generate_collections_requirements.py  generate_context7_cli_docs.py  generate_context7_docs.py  manage_doc_versions.py  milestone_tracker.py  performance_baseline_setup.py  pre-commit-context7-docs.py  prepare_release.py  quality-gate.py  run_comprehensive_reporting_tests.py  run_comprehensive_tests.py  run_performance_tests.py  run_tests.py  setup-dev.bat  setup-dev.sh  test_reporter.py  version_manager.py
src/fqcn_converter/: __init__.py  __main__.py  _version.py  exceptions.py  py.typed  version.py
src/fqcn_converter/cli/: __init__.py  batch.py  convert.py  enhanced.py  interactive.py  main.py  validate.py
src/fqcn_converter/config/: __init__.py  manager.py
src/fqcn_converter/core/: __init__.py  batch.py  converter.py  validator.py
src/fqcn_converter/reporting/: __init__.py  formatters.py  models.py  report_generator.py
src/fqcn_converter/tools/: __init__.py  config_generator.py  precommit.py
src/fqcn_converter/utils/: __init__.py  logging.py  yaml_handler.py
tests/: conftest.py  demo_conversion.py  run_all_tests.py  run_comprehensive_validation_tests.py  run_production_readiness_tests.py  run_unit_tests.py  test_interactive_mode.py  test_parallel_execution.py  test_reporting.py
tests/fixtures/: __init__.py  data_generators.py  performance_baselines.py  performance_monitor.py  performance_reporter.py  performance_statistics.py  performance_utils.py  pytest_performance_plugin.py  sample_content.py  test_utilities.py
tests/integration/: __init__.py  test_ansible_compatibility.py  test_api_examples_validation.py  test_api_stability.py  test_batch_processing.py  test_compatibility.py  test_comprehensive_integration.py  test_coverage_and_quality_reporting.py  test_end_to_end.py  test_end_to_end_workflow_validation.py  test_github_workflow_validation.py  test_production_readiness.py  test_regression_and_performance.py  test_scenario_based_workflows.py  test_stress_performance.py
tests/performance/: __init__.py  test_large_file_processing.py  test_performance_benchmarks.py  test_performance_monitoring.py  test_validation_performance.py
tests/unit/: __init__.py  test_batch_additional_coverage.py  test_batch_core_complete.py  test_batch_edge_cases.py  test_batch_error_handling.py  test_batch_processing_focused.py  test_cli_batch.py  test_cli_batch_comprehensive.py  test_cli_convert.py  test_cli_flexible_args.py  test_cli_main.py  test_cli_validate.py  test_config_manager.py  test_converter.py  test_coverage_improvements.py  test_exceptions.py  test_imports_and_exceptions.py  test_logging_utils.py  test_main_module.py  test_psutil_import.py  test_validator.py  test_version.py  test_yaml_handler.py
